--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,10 @@
         <div class="center text-big bold">
          Hello im manisha and  this is my first web app.
         </div>
+        <script>
+            alert('hai  im javascript');
+            </script>
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
